# playground

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  QuietOffliner.sln  README.kor.md  README.md  build.ps1  main.cpp  manifest.json
.github/ISSUE_TEMPLATE/: bug-report-------.md  bug_report.md  feature-request------.md
Deluge/: .gitignore
ModernPainter/: README.md
Probo.EasyLoader/: App.xaml.cs  MainWindow.xaml  Probo.EasyLoader.csproj  Probo.EasyLoader.sln  app.manifest
Probo.EasyLoader/Probo.EasyLoader/: App.xaml  MainWindow.xaml.cs  Package.appxmanifest
Probo.EasyLoader/Properties/: launchSettings.json
QuietOffliner/: README.md
QuietOffliner.Cli/: Program.cs  QuietOffliner.Cli.csproj
QuietOffliner.Core/: QuietOffliner.Core.csproj
QuietOffliner.Core/Controller/: IProvider.cs  ProviderNotSupportedException.cs  ProviderSupportList.cs
QuietOffliner.Core/Extensions/: TextExtensions.cs
QuietOffliner.Core/Model/: EpisodeInfo.cs  Series.cs  SeriesInfo.cs
QuietOffliner.Core/Resources/: HttpHeaders.Designer.cs
QuietOffliner.Core/Services/: FileIOService.cs  HtmlQueryService.cs  SrcFilterOutService.cs  WebCompressService.cs  WebRequestService.cs  WebResponseService.cs  ZipCompressService.cs
QuietOffliner.JMana/: QuietOffliner.JMana.csproj
QuietOffliner.JMana/Controller/: JManaProvider.cs  (+1 more)
QuietOffliner.WebP/: QuietOffliner.WebP.csproj
inc/: com.hpp  proc.hpp  ui.h
js/: origin-demangler.js
libprobo/: .gitignore  CMakeLists.txt  README.md
libprobo/inc/: probo.hpp
libprobo/inc/component/: input.hpp  lamp.hpp  lifetime.hpp  motor.hpp
libprobo/lib/: api.h
libprobo/src/component/: lifetime.cpp
lwman/: README.md
origin-demangler/: manifest.json
probo-sdk/: CMakeLists.txt  main.cpp
src/: Makefile  com.cpp  main.c  main.cpp  origin-demangler.js  probo.cpp  proc.cpp  ui.c
(+125 files in other folders)
